Added a few things

--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="row">
-				
-			</div>
+			<form>
+				<div class="row">
+					<div class="twelve columns">
+						<h4 style="font-size: 8.0rem; text-align: center; margin-top: 10%;" >Register for 2016-2017 Computer Club!</h4>
+					</div>
+					<div style="padding-left: 0; margin-left: 0; "class="six columns">
+						<label for="exampleEmailInput">Your email</label>
+						<input class="u-full-width" type="email" placeholder="boris@computerclub.ca" id="exampleEmailInput">
+					</div>
+					<div style="text-align: right; padding-right: 0; margin-right: 0;" class= "six columns">
+						<label for="NameInput">Your name</label>
+						<input style="text-align: right;"class="u-full-width" type="email" placeholder="Boris Skurikhin" id="NameInput">
+					</div>
+				</div>
+			</form>
 		</div>
 	</body>
 </html>
