--- a/index.html
+++ b/index.html
@@ -2,32 +2,39 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Your page title here :)</title>
-		<meta name="description" content="">
-		<meta name="author" content="">
+		<title>Register for 2016-2017 Computer Club!</title>
+		<meta name="description" content="Computer Club registration for new memebers">
+		<meta name="author" content="Boris Skurikhin">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/skeleton.css">
+		<link rel="stylesheet" href="css/custom.css">
 		<link rel="icon" type="image/png" href="images/favicon.png">
 	</head>
 	<body>
-		<div class="container">
-			<form>
-				<div class="row">
-					<div class="twelve columns">
-						<h4 style="font-size: 8.0rem; text-align: center; margin-top: 10%;" >Register for 2016-2017 Computer Club!</h4>
+		<div class= "wrapper">
+			<div class="container">
+				<form>
+					<div class="row">
+						<div class="twelve columns">
+							<h4 style="font-size: 8.0rem; margin-top: 10%;" >Register for 2016-2017 Computer Club!</h4>
+						</div>
+						<div style="padding-left: 0; margin-left: 0; "class="four columns">
+							<label for="exampleEmailInput">Your email</label>
+							<input class="u-full-width" type="email" placeholder="boris@computerclub.ca" id="exampleEmailInput">
+						</div>
+						<div class= "four columns">
+							<label for="NameInput">Your name</label>
+							<input class="u-full-width" type="email" placeholder="Boris Skurikhin" id="NameInput">
+						</div>
+						<div class= "four columns">
+							<label>Submit</label>
+							<input class="button-primary" type="submit" value="Submit">
+						</div>
 					</div>
-					<div style="padding-left: 0; margin-left: 0; "class="six columns">
-						<label for="exampleEmailInput">Your email</label>
-						<input class="u-full-width" type="email" placeholder="boris@computerclub.ca" id="exampleEmailInput">
-					</div>
-					<div style="text-align: right; padding-right: 0; margin-right: 0;" class= "six columns">
-						<label for="NameInput">Your name</label>
-						<input style="text-align: right;"class="u-full-width" type="email" placeholder="Boris Skurikhin" id="NameInput">
-					</div>
-				</div>
-			</form>
+				</form>
+			</div>
 		</div>
 	</body>
 </html>
